moved .card class into own .scss

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -278,8 +278,7 @@
           "customOutput": false,
           "imported": true,
           "parents": [
-            "b4144c5e",
-            "0115b650"
+            "b4144c5e"
           ],
           "type": "sass"
         },
@@ -557,6 +556,26 @@
           "imported": false,
           "parents": [],
           "type": "html"
+        },
+        "1914c49c": {
+          "id": "1914c49c",
+          "path": "app/ContentTypes/_card.scss",
+          "output": "app/ContentTypes/_card.css",
+          "name": "_card.scss",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "0115b650"
+          ],
+          "type": "sass"
         }
       },
       "deploymentHistory": {},
