adds the live styles for the homepage from june-july for comparison

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -557,6 +557,22 @@
             "0115b650"
           ],
           "type": "sass"
+        },
+        "d4fca82c": {
+          "id": "d4fca82c",
+          "path": "home2016-livejuly.css",
+          "output": "home2016-livejuly-dist.css",
+          "name": "home2016-livejuly.css",
+          "category": "CSS",
+          "autoCompile": false,
+          "sourceMaps": false,
+          "compress": true,
+          "cssnext": false,
+          "autoprefixer": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "css"
         }
       },
       "deploymentHistory": {},
