fix border, add correct logo

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -576,6 +576,19 @@
             "0115b650"
           ],
           "type": "sass"
+        },
+        "9827425a": {
+          "id": "9827425a",
+          "path": "media/assets/msudenver-informal_logo.png",
+          "output": "media/assets/msudenver-informal_logo.png",
+          "name": "msudenver-informal_logo.png",
+          "category": "IMAGE",
+          "size": 12200,
+          "type": "png",
+          "initialSize": 12200,
+          "optimized": false,
+          "height": 0,
+          "width": 0
         }
       },
       "deploymentHistory": {},
