updates prepros config

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -470,33 +470,6 @@
           "parents": [],
           "type": "html"
         },
-        "8a21f0ba": {
-          "id": "8a21f0ba",
-          "path": "home2016_1.css",
-          "output": "home2016_1-dist.css",
-          "name": "home2016_1.css",
-          "category": "CSS",
-          "autoCompile": false,
-          "sourceMaps": false,
-          "compress": true,
-          "cssnext": false,
-          "autoprefixer": false,
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "css"
-        },
-        "261764a5": {
-          "id": "261764a5",
-          "path": "springhome_index_060816.html",
-          "output": "springhome_index_060816.html",
-          "name": "springhome_index_060816.html",
-          "category": "JUST_WATCH",
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "html"
-        },
         "c4301252": {
           "id": "c4301252",
           "path": "media/assets/MSU-Denverlogo_white.png",
@@ -535,6 +508,49 @@
           "path": "home2016-livejuly.css",
           "output": "home2016-livejuly-dist.css",
           "name": "home2016-livejuly.css",
+          "category": "CSS",
+          "autoCompile": false,
+          "sourceMaps": false,
+          "compress": true,
+          "cssnext": false,
+          "autoprefixer": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "css"
+        },
+        "ab0f1ea1": {
+          "id": "ab0f1ea1",
+          "path": "qualtrics_form_css/generic.html",
+          "output": "qualtrics_form_css/generic.html",
+          "name": "generic.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "42702e32": {
+          "id": "42702e32",
+          "path": "qualtrics_form_css/generic.css",
+          "output": "qualtrics_form_css/generic-dist.css",
+          "name": "generic.css",
+          "category": "CSS",
+          "autoCompile": false,
+          "sourceMaps": false,
+          "compress": true,
+          "cssnext": false,
+          "autoprefixer": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "css"
+        },
+        "e41dbb09": {
+          "id": "e41dbb09",
+          "path": "chat_environment_css/restyled.css",
+          "output": "chat_environment_css/restyled-dist.css",
+          "name": "restyled.css",
           "category": "CSS",
           "autoCompile": false,
           "sourceMaps": false,
