--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gulp-htmlmin": "^1.3.0",
     "gulp-if": "^2.0.0",
     "gulp-imagemin": "^2.0.0",
+    "gulp-inject": "^4.1.0",
     "gulp-load-plugins": "^1.0.0",
     "gulp-newer": "^1.0.0",
     "gulp-sass": "^2.0.0",
