--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "apache-server-configs": "^2.7.1",
     "babel-core": "^6.0.15",
     "babel-preset-es2015": "^6.0.15",
+    "bower": "^1.7.9",
     "browser-sync": "^2.9.0",
     "del": "^2.0.2",
     "eslint-config-google": "^0.3.0",
