--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "grunt-contrib-watch": "latest",
     "grunt-express": "latest",
     "grunt-html-validation": "^0.1.18",
-    "grunt-include-replace": "latest"
+    "grunt-include-replace": "latest",
+    "grunt-svg-sprite": "^1.3.6"
   }
 }
