commit map files (and adds borders)

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,19 @@
 node_modules
 .tmp
 app.yaml
+
+dist/styles/ContentTypes/content.css.map
+
+dist/styles/ContentTypes/content.css.map
+
+dist/styles/ContentTypes/content.css.map
+
+dist/styles/home2016.css.map
+
+dist/styles/home2016.css.map
+
+dist/styles/main2016.css.map
+
+dist/styles/ContentTypes/content.css.map
+
+dist/styles/home2016.css
