--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "grunt-express": "latest",
     "grunt-html-validation": "^0.1.18",
     "grunt-include-replace": "latest",
-    "grunt-svg-sprite": "^1.3.6"
-  }
+    "grunt-svg-sprite": "^1.3.6",
+    "grunt-parallel": "^0.5.1"
+  },
 }
