--- a/package.json
+++ b/package.json
@@ -8,15 +8,14 @@
     "grunt": "^1.0.1",
     "grunt-bower-task": "latest",
     "grunt-contrib-copy": "latest",
-    "grunt-contrib-sass": "latest",
+    "grunt-contrib-sass": "^1.0.0",
     "grunt-contrib-uglify": "latest",
     "grunt-contrib-watch": "latest",
     "grunt-express": "latest",
     "grunt-html-validation": "^0.1.18",
     "grunt-include-replace": "latest",
-    "grunt-svg-sprite": "^1.3.6",
-    "grunt-parallel": "^0.5.1"
+    "grunt-parallel": "^0.5.1",
+    "grunt-svg-sprite": "^1.3.6"
   },
-  "dependencies": {
-  }
+  "dependencies": {}
 }
