--- a/package.json
+++ b/package.json
@@ -17,5 +17,7 @@
     "grunt-parallel": "^0.5.1",
     "grunt-svg-sprite": "^1.3.6"
   },
-  "dependencies": {}
+  "dependencies": {
+    "node-sass": "^4.12.0"
+  }
 }
