--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "grunt-svg-sprite": "^1.3.6"
   },
   "dependencies": {
-    "node-sass": "^4.12.0",
+    "jquery-match-height": "^0.7.2",
+    "node-sass": "^4.13.1",
     "sass": "^1.25.0"
   }
 }
